# BioMotionYeah

./: .gitignore  CLAUDE.md  LICENSE  OFFLINE_MODE_PLAN.md  README.md  project.yml
BioMotion/: Info.plist
BioMotion.xcodeproj/: project.pbxproj
desktop-pipeline/: .gitignore  CLAUDE.md  OPEN_ISSUES.md  README.md  environment.yml  pyproject.toml  requirements.txt
desktop-pipeline/configs/: trail2.yaml  trail2_short.yaml
desktop-pipeline/fixtures/ios-exports/: README.md
desktop-pipeline/fixtures/ios-exports/run2/: 46A017D9-568C-409D-B384-22DDFFE0592A_activations.sto  46A017D9-568C-409D-B384-22DDFFE0592A_inverse_dynamics.sto  46A017D9-568C-409D-B384-22DDFFE0592A_kinematics.mot  46A017D9-568C-409D-B384-22DDFFE0592A_muscle_forces.sto  46A017D9-568C-409D-B384-22DDFFE0592A_summary.json
desktop-pipeline/scripts/: compare_to_ios.py  plot_comparison.py  run_pipeline.py
desktop-pipeline/src/biomotion_desktop/: __init__.py  anthropometrics.py  cli.py  compare.py  ios_export.py  opensim_id.py  opensim_ik.py  opensim_so.py  pipeline.py  plot.py  storage_io.py  trial.py
desktop-pipeline/tests/: test_bilateral_asymmetry.py  test_smoke.py
desktop-pipeline/tests/fixtures/bilateral_grf_baseline/: README.md
desktop-pipeline/tests/fixtures/bilateral_grf_baseline/noGRF/: 357FDEF1-F363-46F2-97EB-C0FA266869A8_activations.sto  357FDEF1-F363-46F2-97EB-C0FA266869A8_summary.json
desktop-pipeline/tests/fixtures/bilateral_grf_baseline/withGRF/: D57C2A63-6B0C-4705-A704-B991B1518DE0_activations.sto  D57C2A63-6B0C-4705-A704-B991B1518DE0_summary.json
docs/: UI_PARAMETERS.md
(+67 files in other folders)
